--- a/project20.html
+++ b/project20.html
@@ -9,74 +9,57 @@
 </head>
 <body>
     <!-- Меню -->
-   <header>
-    <img src="./img/logo.png" alt="logo">
-    <nav>
-        <a href="">Главная</a>
-        <a href="">Сеансы</a>
-        <a href="">Отывы</a>
-        <a href="">Контакты</a>
-        <a href="">Новости</a>
-        <a href="">Обо мне</a>
-        <a href="">Блог</a>
-    </nav>
-    <button>Записаться на сеанс</button>
-   </header>
-   Основной контент
-   <main>
-    
-    <div class="heads_logo">
-    
-        <pre><h1>
-            Управление здоровья           
+    <header>
+        <img src="./img/logo.png" alt="logo">
+        <nav>
+            <a href="">Главная</a>
+            <a href="">Сеансы</a>
+            <a href="">Отывы</a>
+            <a href="">Контакты</a>
+            <a href="">Новости</a>
+            <a href="">Обо мне</a>
+            <a href="">Блог</a>
+        </nav>
+        <button>Записаться на сеанс</button>
+    </header>
+    <main>
+        <div class="heads_logo">
+            <pre><h1>
+         <h2>Укрепление здоровья</h2>       
             <h1>Акватерапия<br>RitmStyle</h1>  
     </h1></pre>
-    </div>
-    <div class="siance">
-        <h1>Сеансы RitmStyle</h1>
-        <div class="parent">
-            <div class="div1"></div>
-            <div class="div2"></div>
-            <div class="div3"></div>
-            <div class="div4"></div>
-            <div class="div5"></div>
-            <div class="div6"></div>
-    </div>
-    <div class="feed">
-    <h1>Отзывы</h1>
-    <div class="feed_content">
-        <div class="feed1"></div>
-        <div class="feed2"></div>
-        <div class="feed3"></div>
-    </div>
-    <div class="feed_nav"></div>
-    </div>
-    <div class="about"></div>
-    <div class="about_cont1">
-    </div>
-    <div class="about_cont2">
-<p></p>
-<img src="" alt="">
-    </div>
-
-    <div class="price">
-        <h1>Стоимость сеансов</h1>
-        <ul>
-            <li>RimtStyle с погружением<span>1000р</span></li>
-            <li>Абонемент RitmStyle<span>5500р</span></li>
-            <li>RitmStyle для пар<span>6000р</span></li>
-            <li>RitmStyle для беременных<span>13500р</span></li>
-            <li>RitmStyle + фотосессия<span>11500р</span></li>
-        </ul>
-        <div class="price_img">
-            <img src="" alt="">
-            <p>Подарочный сертификат</p>
         </div>
-    </div>
-   </main>
-
-   <footer>
-
-   </footer>
+        <div class="siance">
+            <h1>Сеансы RitmStyle</h1>
+            <div class="two_logo">
+                <pre><h2>
+    Стандартный RitmStyle
+    </h2></pre>
+            </div>
+            <div class="three_logo">
+                <pre><h3>
+    RitmStyle для пар
+        </h3></pre>
+            </div>
+            <div class="four_logo">
+                <pre><h3>
+    RitmStyle для беременных
+    </h3></pre>
+            </div>
+            <div class="five_logo">
+                <pre><h3>
+    RitmStyle с полным погружением под воду
+    </h3></pre>
+            </div>
+            <div class="six_logo">
+            <pre><h3>
+    RitmStyle + красочная подводная фотосессия</h3></pre>
+            </div>
+            <div class="reviews"></div>
+            <div class="about"></div>
+            <div class="price"></div>
+            <div class="contacts"></div>
+            <div class="footer"></div>
+</main>
 </body>
 </html>
