--- a/project20.html
+++ b/project20.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,6 +8,7 @@
     <link rel="stylesheet" href="index.css">
     <title>Document</title>
 </head>
+
 <body>
     <!-- Меню -->
     <header>
@@ -52,14 +54,16 @@
     </h3></pre>
             </div>
             <div class="six_logo">
-            <pre><h3>
-    RitmStyle + красочная подводная фотосессия</h3></pre>
+                <pre><h3>
+    RitmStyle + красочная подводная фотосессия
+    </h3></pre>
             </div>
             <div class="reviews"></div>
             <div class="about"></div>
             <div class="price"></div>
             <div class="contacts"></div>
             <div class="footer"></div>
-</main>
+    </main>
 </body>
+
 </html>
